--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "mongoose": "^8.9.2",
     "next": "^15.0.4",
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-tooltip": "^5.28.0",
     "save": "^2.9.0"
   },
   "devDependencies": {
