--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-tooltip": "^5.28.0",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "uuid": "^11.0.4"
   },
   "devDependencies": {
     "eslint": "^8",
