--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon server.mjs",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
