--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.474.0",
     "mongoose": "^8.9.2",
     "next": "^15.0.4",
     "next-auth": "^4.24.11",
@@ -20,6 +23,8 @@
     "save": "^2.9.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.4"
   },
   "devDependencies": {
